--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "petful-server",
   "scripts": {
-    "dev": "nodemon src/server"
+    "dev": "nodemon src/server",
+    "predeploy": "npm audit",
+    "deploy": "git push heroku master"
   },
   "engines": {
        "node": "12.14.0"
